assets/less/layouts/_general.less
body {
  padding: 0;
  margin: 0;
}

main {
  font-family: 'Raleway';
  font-size: 1.25em;
  line-height: 1.8em;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Raleway';
}

p {
  margin-bottom: 30px;
}

h2 {
  margin: 25px 0 20px;
}

img {
  display: block;
}


.clear {
  clear: both;
}

.sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    border: 0;
}

body.single-post,
body.single-attraction,
body.page {

  .article-featured-image {

    position: relative;
    max-width: 1170px;
    margin: 0 auto;

    img {
      display: block;
      margin: 0 auto;
      width: 100%;
      height: 100%;
    }

    .image-title-box {
      text-align: center;
      background: rgba(0,0,0,0.8);
      color: white;
      margin: 0;

      position: relative;
      top: 0;
      left: 0;
      padding: 5px 20px;

      @media (min-width: @bp-larger-than-phablet) {
        padding: 20px 20px;
        position: absolute;
        top: 3em;
        left: 50%;
        transform: translateX(-50%);
        color: white;
      }

      @media (min-width: @bp-larger-than-tablet) {
        position: absolute;
        left: 100px;
        transform: none;
      }

      h1 {
        font-size: xx-large;
        font-weight: bold;
        margin-top: 0;
      }

      h2 {
        margin: 0;
        text-transform: uppercase;
        font-size: xx-small;
      }

    }
  }

  div.article-content {
    margin-top: 35px;
  }

  aside {
    // background: lightblue;
  }

  article {

    h1 {
      margin-bottom: 25px;
    }

    figure {
      max-width: 100%;
      height: auto;
      margin: 18px auto;
    }

  }
}

.post-caption {
  float: right;
  font-size: small;
}

article {
  img {
    width: 100%;
    max-width: 100%;

    height: auto;
  }
}

